2010-03-08  Michael Poole <mdpoole@troilus.org>

	* ircd/m_server.c (enum lh_type): New type.
	(check_loop_and_lh): Use the enum instead of magic integers.
	Make the error message a little clearer when neither "hub" nor
	"maxhops" is specified for a server.  Clean up the control flow
	when we decide to reject the link.

2010-03-08  Michael Poole <mdpoole@troilus.org>

	* ircd/test/ircd_match_t.c (_SC_PAGE_SIZE): Default to
	_SC_PAGESIZE if that is defined (as it is on some Unixes).

2010-03-04  Kevin L. Mitchell  <klmitch@mit.edu>

	* ircd/s_bsd.c: use feature_int() to get the integer value of the
	feature...and don't try to set the TOS to its index!

2010-02-02  Michael Poole <mdpoole@troilus.org>

	* include/patchlevel.h (PATCHLEVEL): Bump to (u2.10.12.)13-rc2.

2010-01-13  Michael Poole <mdpoole@troilus.org>

	* ircd/m_burst.c (ms_burst): Do not clear keys or limit here --
	MODE_PARSE_WIPEOUT gets modebuf_flush() to do that for us.

2010-01-06  Michael Poole <mdpoole@troilus.org>

	* Makefile.in: Remove doc/Makefile from the build.

	* configure.in: Do not generate doc/Makefile.

	* configure: Regenerate.

	* doc/Makefile.in: Delete.

	* doc/irc.1: Delete.

	* doc/ircd.8: Delete.

	* libs: Delete.

2010-01-06  Michael Poole <mdpoole@troilus.org>

	* ircd/m_topic.c (ms_topic): When no topic timestamp is passed,
	use the current time instead of the channel creation time.

2010-01-06  Michael Poole <mdpoole@troilus.org>

	* ircd/m_silence.c (m_silence): Only show the silence list for the
	requesting client and for channel services, to help keep other
	clients' servers hidden.

2010-01-06  Michael Poole <mdpoole@troilus.org>

	* ircd/gline.c (gline_add): If a forced G-line has already
	expired, create it in a deactivated state.

2010-01-06  Michael Poole <mdpoole@troilus.org>

	* ircd/m_burst.c (ms_burst): Gracefully handle the case where a
	server sends us a too-large oplevel.  Forward oplevels whenever
	they are in use, not just when the channel is +A.
